add backend storage account secrets and update readme

--- a/.github/workflows/terra-cd.yml
+++ b/.github/workflows/terra-cd.yml
@@ -5,6 +5,11 @@ on:
 
 env:
   TERRAFORM_PATH: ${{ vars.TERRAFORM_PATH }}
+  TERRAFORM_BACKEND_SUBSCRIPTION_ID: ${{ secrets.TERRAFORM_BACKEND_SUBSCRIPTION_ID }}
+  TERRAFORM_BACKEND_RESOURCE_GROUP: ${{ secrets.TERRAFORM_BACKEND_RESOURCE_GROUP }}
+  TERRAFORM_BACKEND_STORAGE_ACCOUNT: ${{ secrets.TERRAFORM_BACKEND_STORAGE_ACCOUNT }}
+  TERRAFORM_BACKEND_CONTAINER: ${{ secrets.TERRAFORM_BACKEND_CONTAINER }}
+  TERRAFORM_BACKEND_STATE_FILE: ${{ secrets.TERRAFORM_BACKEND_STATE_FILE }}
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
