--- a/.github/workflows/terra-destroy.yml
+++ b/.github/workflows/terra-destroy.yml
@@ -1,4 +1,4 @@
-name: CD Terraform
+name: Terraform Destroy
 
 on:
   workflow_dispatch:
@@ -18,7 +18,7 @@ env:
 
 jobs:
   terra-apply:
-    name: CD Terraform
+    name: Terraform Destroy
     runs-on: ubuntu-latest
 
     steps:
