--- a/.github/workflows/app-cd.yml
+++ b/.github/workflows/app-cd.yml
@@ -5,6 +5,7 @@ on:
 
 env:
   TERRAFORM_PATH: ${{ vars.TERRAFORM_PATH }}
+  APP_PATH: ${{ vars.APP_PATH }}
   TERRAFORM_BACKEND_SUBSCRIPTION_ID: ${{ secrets.TERRAFORM_BACKEND_SUBSCRIPTION_ID }}
   TERRAFORM_BACKEND_RESOURCE_GROUP: ${{ secrets.TERRAFORM_BACKEND_RESOURCE_GROUP }}
   TERRAFORM_BACKEND_STORAGE_ACCOUNT: ${{ secrets.TERRAFORM_BACKEND_STORAGE_ACCOUNT }}
@@ -16,6 +17,8 @@ env:
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
+  TF_VAR_ACR_SERVER: ${{ secrets.TF_VAR_ACR_SERVER }}
+  TF_VAR_IMAGE_NAME: ${{ secrets.TF_VAR_IMAGE_NAME }}
 
 jobs:
   app-build-and-push:
