--- a/.github/workflows/app-ci.yml
+++ b/.github/workflows/app-ci.yml
@@ -5,17 +5,19 @@ on:
 
 env:
   TERRAFORM_PATH: ${{ vars.TERRAFORM_PATH }}
+  APP_PATH: ${{ vars.APP_PATH }}
   TERRAFORM_BACKEND_SUBSCRIPTION_ID: ${{ secrets.TERRAFORM_BACKEND_SUBSCRIPTION_ID }}
   TERRAFORM_BACKEND_RESOURCE_GROUP: ${{ secrets.TERRAFORM_BACKEND_RESOURCE_GROUP }}
   TERRAFORM_BACKEND_STORAGE_ACCOUNT: ${{ secrets.TERRAFORM_BACKEND_STORAGE_ACCOUNT }}
   TERRAFORM_BACKEND_CONTAINER: ${{ secrets.TERRAFORM_BACKEND_CONTAINER }}
   TERRAFORM_BACKEND_STATE_FILE: ${{ secrets.TERRAFORM_BACKEND_STATE_FILE }}
-  APP_PATH: ${{ vars.APP_PATH }}
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
+  TF_VAR_ACR_SERVER: ${{ secrets.TF_VAR_ACR_SERVER }}
+  TF_VAR_IMAGE_NAME: ${{ secrets.TF_VAR_IMAGE_NAME }}
 
 jobs:
   app-build:
