restrict ci pipelines

--- a/.github/workflows/app-ci.yml
+++ b/.github/workflows/app-ci.yml
@@ -2,6 +2,10 @@ name: App Build
  
 on:
   push:
+    paths:
+    - src
+    - scripts/app.sh
+    - Makefile
 
 env:
   TERRAFORM_PATH: ${{ vars.TERRAFORM_PATH }}
