--- a/.github/workflows/terra-ci.yml
+++ b/.github/workflows/terra-ci.yml
@@ -2,6 +2,9 @@ name: CI Terraform
 
 on:
   push:
+    paths:
+    - terraform
+    - Makefile
 
 env:
   TERRAFORM_PATH: ${{ vars.TERRAFORM_PATH }}
